--- a/src/Pages/Home/home.css
+++ b/src/Pages/Home/home.css
@@ -28,7 +28,7 @@
   position: relative;
   text-align: center;
   color: white;
-  padding: 20px;
+  padding-top: 50px;
 }
 
 .content {
@@ -87,7 +87,7 @@ p {
 
 @media (max-width: 600px) {
   .input-box {
-    height: 50px;
+    height: 100px;
     font-size: 0.9rem;
   }
 
